--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 <h2>Upload a .OBJ file to a process with Blender</h2>
 
 <form id="uploadForm" enctype="multipart/form-data">
-  <input type="file" name="file" accept=".obj" required />
+  <input type="file" name="file" accept=".fbx" required />
   <button type="submit">Upload and Process</button>
 </form>
 
