--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Upload .OBJ File</title>
+  <title>Upload .FBX File</title>
 </head>
 <body>
-<h2>Upload a .OBJ file to a process with Blender</h2>
+<h2>Upload a .FBX file to a process with Blender</h2>
 
 <form id="uploadForm" enctype="multipart/form-data">
   <input type="file" name="file" accept=".fbx" required />
